<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_bankdetails"
            android:icon="@drawable/ic_home"
            android:title="@string/bank_detail"/>
        <item
            android:id="@+id/menu_contactus"
            android:icon="@drawable/ic_contactus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feddback" />
        <item
            android:id="@+id/menu_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/menu_Aboutus"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>